@@ -1,6 +1,7 @@
 0.08
  [Common]
  - Add blank line before return and after arguments.
+ - Update copyright years.
 
 0.07 2020-04-26T15:53:28+02:00
  [Common]
